# frawk

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.cargo/: config
.github/workflows/: clippy.yml  fmt.yml  test-nollvm.yml  test.yml
info/: overview.md  parallelism.md  performance.md  reference.md  types.md
info/scripts/: complex_sum.out  complex_sum.py  complex_sum.sh  complex_sum.sh.out  complex_sum.sh.out.2  complex_sum.sh.out.mac  filter.out  filter.sh  filter.sh.out  filter.sh.out.2  filter.sh.out.mac  groupby.out  groupby.sh  groupby.sh.out  groupby.sh.out.2  groupby.sh.out.mac  parallel_stat.awk  select.out  select.sh  select.sh.out  select.sh.out.2  select.sh.out.mac  stat2.out  stat_2.sh  stat_2.sh.out  stat_2.sh.out.2  stat_2.sh.out.mac  sum2.out  sum2.sh  sum2.sh.out  sum2.sh.out.2  sum2.sh.out.mac  summarize.awk
info/scripts/complex_sum/: Cargo.toml
info/scripts/complex_sum/src/: main.rs
src/: arena.rs  ast.rs  ast1.rs  builtins.rs  bytecode.rs  cfg.rs  cfg2.rs  common.rs  compile.rs  cross_stage.rs  dataflow.rs  display.rs  dom.rs  harness.rs  input_taint.rs  interp.rs  lexer.rs  main.rs  pushdown.rs  runtime.rs  ssa.rs  string_constants.rs  strton.rs  syntax.lalrpop  test_string_constants.rs  typed_ir.rs  types.rs  types2.rs
src/codegen/: clif.rs  clir.rs  intrinsics.rs  mod.rs
src/codegen/llvm/: builtin_functions.rs  intrinsics.rs  mod.rs
src/llvm/: attr.rs  builtin_functions.rs  intrinsics.rs  mod.rs
src/parsing/: mod.rs  syntax.lalrpop
src/runtime/: bytes_rc.rs  command.rs  csv.rs  genji.txt  mod.rs  printf.rs  shared.rs  splitter.rs  str_impl.rs  string_search.rs  strton.rs  utf8.rs  writers.rs
src/runtime/float_parse/: mod.rs  slow_path.rs
src/runtime/splitter/: batch.rs  chunk.rs  mod.rs  regex.rs
tests/: CURRENT_FAILURES  misc.rs  nawk_p.rs  nawk_t.rs  sort.rs  string_constants.rs
tests/test_output/: t_0a.txt  t_1.txt  t_1_x.txt  t_2.txt  t_2_x.txt  t_3.txt  t_3_x.txt  t_4.txt  t_4_x.txt  t_5_x.txt  t_6.txt  t_6_x.txt  t_6a.txt  t_6b.txt  t_8_x.txt  t_NF.txt  t_aeiou.txt  t_array.txt  t_array1.txt  t_array2.txt  t_assert.txt  t_avg.txt  t_b_x.txt  t_be.txt  t_beginnext.txt  t_break.txt  t_break3.txt  t_bug1.txt  t_builtins.txt  t_cat.txt  t_cat2.txt  t_cmp.txt  t_coerce.txt  t_coerce2.txt  t_concat.txt  t_cond.txt  t_contin.txt  t_crlf.txt  t_cum.txt  t_d_x.txt  (+80 more)
