[package]
name = "frawk"
version = "0.4.4"
authors = ["Eli Rosenthal <ezr@cs.brown.edu>"]
edition = "2018"
description = "an efficient Awk-like language"
homepage = "https://github.com/ezrosent/frawk"
repository = "https://github.com/ezrosent/frawk"
readme = "README.md"
keywords = ["awk", "csv", "tsv"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR  Apache-2.0"
build = "build.rs"


[dependencies]
petgraph = "0.4.13"
smallvec = "1.6"
hashbrown = "0.9"
lazy_static = "1.4.0"
regex = "1.3"
regex-syntax = "0.6.22"
itoa = "0.4"
ryu = "1.0"
libc = "0.2"
jemallocator = { version = "0.3", optional = true }
rand = "0.8.3"
lalrpop-util = "0.19.6"
unicode-xid = "0.2.0"
llvm-sys = {version = "120", optional = true }
clap = "3.0"
crossbeam-channel = "0.4"
crossbeam = "0.7.3"
num_cpus = "1.13.0"
cfg-if = "0.1"
memchr = "2.4"
grep-cli = "0.1"
termcolor = "1.1"
itertools = "0.9.0"
assert_cmd = "1.0.2"
paste = "1.0"
cranelift = "0.75.0"
cranelift-codegen = "0.75.0"
cranelift-frontend = "0.75.0"
cranelift-module = "0.75.0"
cranelift-jit = "0.75.0"
fast-float = "0.2"
bumpalo = { version = "3.6", features = ["collections"] }
target-lexicon = "0.12.1"

[dev-dependencies]
assert_cmd = "1.0.2"
tempfile = "3.1.0"


[features]
default = ["use_jemalloc", "allow_avx2", "llvm_backend", "unstable"]
use_jemalloc = ["jemallocator"]
# Certain features leverage the AVX2 instruction set, but AVX2 can often make
# the entire application slightly slower, even on chips that support it. For
# those cases, consider disabling allow_avx2.
allow_avx2 = []
llvm_backend = ["llvm-sys"]
unstable = []

[profile.release]
lto = "thin"
# debug = true
# codegen-units = 1

[build-dependencies]
lalrpop = "0.19.6"
